Fix national objectives with 2.5 save games. (#10524)
* Fix national objectives with 2.5 save games.

Fix national objectives with 2.5 save games, where the players list may be empty instead of null.
Also clean up some code in ObjectivePanel.java.